tests/invalid/invalid-port-type.hcdf
<?xml version="1.0"?>
<hcdf version="1.0" name="invalid-port-type">
  <comp name="board">
    <port name="p0" type="INVALID"/>
  </comp>
</hcdf>
